<resources>
    <string name="app_name">Make My Hall</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="font_family_light">sans-serif-light</string>

    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="info">More info</string>
    <string name="Rs">\u20B9\100</string>
    <string name="spin">All category</string>
    <string name="country_prompt">Choose a country</string>
    <string name="categorying">Make My Hall will Providing  this service. which is Available Near You. just Make a Call us By Clicking Below Button.
we will take Care Rest. </string>


    <string name="hallname">hallname</string>
    <string name="event">Event Hall</string>
    <string name="meetinghall">meeting Hall</string>
    <string name="conferencehall">conference Hall</string>
    <string name="exhibition">Exhibition Hall</string>
    <string name="party">party Hall</string>
    <string name="marriegehall">Marriage Hall</string>
    <string name="check">check internet connection</string>
    <string name="process">Processing...</string>

    <string-array name="spinnerItems">
        <item>All Category</item>
        <item>Marriage Hall</item>
        <item>Party Hall</item>
        <item>Meeting hall</item>
    </string-array>
    <string name="title_activity_maps_hall">Mhall Operator</string>

    <string name="autocomplete_hint">Search a Place</string>

    <string name="beautyparlors">beautyparlors</string>
    <string name="cateres">cateres</string>
    <string name="coconutmerchants">coconutmerchants</string>
    <string name="coffeesuppliers">coffeesuppliers</string>
    <string name="dairyproducts">dairyproducts</string>
    <string name="furniture">furniture</string>
    <string name="generatorhires">generatorhires</string>
    <string name="mensuiting">mensuiting</string>
    <string name="mentailoring">mentailoring</string>
    <string name="milksuppliers">milksuppliers</string>
    <string name="mineralwatersuppliers">mineralwatersuppliers</string>
    <string name="nurseryflowerpots">nurseryflowerpots</string>
    <string name="orchestra">orchestra</string>
    <string name="panleaf">panleaf</string>
    <string name="plantainleaf">plantainleaf</string>
    <string name="plasticpaperbags">plasticpaperbags</string>
    <string name="poojaitems">poojaitems</string>
    <string name="photographers">photographers</string>
    <string name="printers">printers</string>
    <string name="provisions">provisions</string>
    <string name="resorts">resorts</string>
    <string name="softdrinks">softdrinks</string>
    <string name="silksaree">silksaree</string>
    <string name="sweets">sweets</string>
    <string name="condiment">condiment</string>
    <string name="videography">videography</string>
    <string name="WeddingCard">Wedding Card</string>
    <string name="tentssuppliers">tentssuppliers</string>
    <string name="tourstravellers">tourstravellers</string>
    <string name="turbans">turbans</string>
    <string name="watersuppliers">watersuppliers</string>
    <string name="weddingcards">weddingcards</string>
    <string name="detective">detective</string>
    <string name="entertainment">entertainment</string>
    <string name="ethnicwear">ethnicwear</string>
    <string name="flowerdecorators">flowerdecorators</string>
    <string name="fruitmerchants">fruitmerchants</string>
    <string name="giftitems">giftitems</string>
    <string name="gasquipment">gasquipment</string>
    <string name="horseprovider">horseprovider</string>
    <string name="gentsbeauty">gentsbeauty</string>
    <string name="hotels">hotels</string>
    <string name="marriagebureau">marriagebureau</string>
    <string name="icecream">icecream</string>
    <string name="jewellery">jewellery</string>
    <string name="lights">lights</string>
    <string name="nadaswara">nadaswara</string>
    <string name="mehendi">mehendi</string>
    <string name="flower">flower</string>


    <string name="Back">Back</string>
    <string name="Home">Home</string>
    <string name="search">search</string>
    <string name="location">detect my Current location</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
